--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
@@ -35,4 +36,4 @@
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.2"
   }
-} 
+}
