--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,18 +1,17 @@
-fastapi==0.100.0
-uvicorn[standard]==0.23.0
-python-dotenv==1.0.0
+fastapi>=0.95.0
+uvicorn>=0.21.1
+python-dotenv>=1.0.0
 requests==2.31.0
 numpy==1.26.4
 huggingface_hub==0.19.4
-sentence-transformers==2.2.2
-chromadb==0.3.26
-pydantic==1.10.8
+sentence-transformers>=2.2.2
+chromadb>=0.4.6
+pydantic>=1.10.7
 aiofiles==23.2.1
-python-multipart==0.0.6
-httpx==0.25.0
+python-multipart>=0.0.6
+httpx>=0.24.0
 streamlit>=1.29.0
 pandas>=2.1.4
-python-dotenv>=1.0.0
 pydantic>=1.10.0,<2.0.0
 langchain>=0.0.325
 arxiv>=1.4.8
@@ -44,3 +43,6 @@ orjson>=3.9.0
 
 # Streaming support
 aiohttp>=3.8.0
+
+# Added aiosqlite
+aiosqlite>=0.19.0
