--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -24,7 +24,7 @@ openai>=1.3.0
 aiohttp>=3.8.0
 tiktoken>=0.5.2
 plotly>=5.18.0
-
+google-generativeai
 # Added nest_asyncio to allow nested event loops
 nest_asyncio==1.5.8
 
