--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,7 +12,6 @@ python-multipart==0.0.6
 httpx==0.25.2
 streamlit>=1.29.0
 pandas==2.1.3
-pydantic>=1.10.0,<2.0.0
 langchain>=0.0.325
 arxiv>=1.4.8
 PyPDF2>=3.0.0
@@ -48,7 +47,9 @@ orjson>=3.9.0
 aiohttp>=3.8.0
 
 # Added aiosqlite
-aiosqlite==0.19.0
+aiosqlite>=0.19.0
+
+# V0.3 MULTIMODAL ENHANCEMENTS
 
 # Added python-docx
 python-docx==1.0.1
@@ -66,5 +67,5 @@ passlib==1.7.4
 bcrypt==4.0.1
 
 # Added llama-parse
-llama-parse==0.0.15
+llama-parse>=0.6.24
 google-genai
