Add Hugging Face integration and comprehensive testing suite
- Introduced Hugging Face as a model provider in the RAG system.
- Added documentation for Hugging Face integration, including setup instructions and available models.
- Implemented backend changes to support querying Hugging Face models.
- Created comprehensive tests for RAG queries, performance, and model configurations.
- Developed specific tests for Hugging Face optimizations and local model integration.
- Ensured error handling and response validation in test scripts.
- Updated existing test structure to accommodate new Hugging Face features.

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -27,6 +27,11 @@ google-generativeai
 # Added nest_asyncio to allow nested event loops
 nest_asyncio==1.5.8
 
+# Transformers for local Hugging Face models
+transformers>=4.36.0
+torch>=2.0.0
+accelerate>=0.24.0
+
 # PDF and Vector DB dependencies
 pypdf>=4.0.1
 unstructured>=0.10.0
